# midnight-graphics

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  plane.cpp  region.cpp
.github/workflows/: build.yml  pages.yml
base/: window.lua  world.lua
base/mesh/: MCTables.lua
base/models/: cube.lua  plane.lua
base/pipelines/: collision.lua  main.lua
base/shaders/: collision.vertex.glsl  fragment.glsl  vertex.glsl
docs/: Doxyfile.in
game/: Components.hpp  Engine.cpp  Engine.hpp  MeshGeneration.cpp  MeshGeneration.hpp  World.cpp  World.hpp
include/midnight/: Def.hpp  Math.hpp  midnight.hpp
include/midnight/Engine/: Collision.hpp
include/midnight/Graphics/: Buffer.hpp  Descriptor.hpp  Event.hpp  Image.hpp  Keyboard.hpp  Mesh.hpp  Model.hpp  Mouse.hpp  ObjectHandle.hpp  Pipeline.hpp  RenderFrame.hpp  Texture.hpp  Window.hpp
include/midnight/Graphics/Backend/: Command.hpp  Device.hpp  Instance.hpp  Sync.hpp
include/midnight/Math/: Angle.hpp  Matrix.hpp  Vector.hpp
include/midnight/Utility/: Singleton.hpp  ThreadSafe.hpp  TypedHandle.hpp
src/: CMakeLists.txt
src/Graphics/: Buffer.cpp  Descriptor.cpp  Image.cpp  Keyboard.cpp  Mesh.cpp  Model.cpp  Mouse.cpp  Pipeline.cpp  RenderFrame.cpp  Texture.cpp  Window.cpp
src/Graphics/Backend/: Command.cpp  Device.cpp  Instance.cpp  Sync.cpp
src/Math/: Angle.cpp
tests/shaders/: vertex.glsl
